gcc/testsuite/gdc.test/compilable/imports/a15760.d
module imports.a15760;

import ice15760;

struct Foo
{
    Bar a;
}
