gcc/testsuite/gdc.test/fail_compilation/imports/issue21295astcodegen.d
module imports.issue21295astcodegen;
struct ASTCodegen {
    import imports.issue21295dtemplate;
}
